<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.SubscriptionFragment">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/subscription_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/subscription_title"
                style="@style/HeadingOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_title"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/subscription_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_subtitle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subscription_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/name_input"
                style="@style/BodyTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/glass_card"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:padding="10dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/email_input"
                style="@style/BodyTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/glass_card"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subscription_options_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/glass_card"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/subscription_options"
                style="@style/HeadingThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_options" />

            <CheckBox
                android:id="@+id/subscription_option_4"
                style="@style/BodyTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/subscription_option_4" />

            <CheckBox
                android:id="@+id/subscription_option_1"
                style="@style/BodyTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_option_1" />

            <CheckBox
                android:id="@+id/subscription_option_2"
                style="@style/BodyTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_option_2" />

            <CheckBox
                android:id="@+id/subscription_option_3"
                style="@style/BodyTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_option_3" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/subscribe_button"
            style="@style/SpanOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient_btn"
            android:text="@string/btn_subscribe" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>