<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.GoodiesFragment">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/subscription_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/subscription_title"
                style="@style/HeadingOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_title"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/subscription_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_subtitle"
                style="@style/SpanTwo"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goodies_card_1_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/glass_card"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/goodies_card_title_1"
                style="@style/HeadingTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_card_title_1"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/subscription_desc_1"
                style="@style/BodyOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_card_desc_1"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goodies_button_card_1"
                style="@style/SpanOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_btn"
                android:text="@string/btn_subscribe" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/goodies_card_2_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/glass_card"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/goodies_card_title_2"
                style="@style/HeadingTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_card_title_2"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/subscription_desc_2"
                style="@style/BodyOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_card_desc_2"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goodies_button_card_2"
                style="@style/SpanOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_btn"
                android:text="@string/btn_subscribe" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/goodies_card_3_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/glass_card"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/goodies_card_title_3"
                style="@style/HeadingTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_card_title_3"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/subscription_desc_3"
                style="@style/BodyOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_card_desc_3"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goodies_button_card_3"
                style="@style/SpanOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_btn"
                android:text="@string/btn_subscribe" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/goodies_card_4_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/glass_card"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/goodies_card_title_4"
                style="@style/HeadingTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_card_title_4"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/subscription_desc_4"
                style="@style/BodyOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodies_card_desc_4"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goodies_button_card_4"
                style="@style/SpanOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_btn"
                android:text="@string/btn_subscribe" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>