<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- GAMEPLAY -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_title_1"
            style="@style/HeadingOne"
            android:layout_marginBottom="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gameplayRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginBottom="20dp"
            android:background="@drawable/glass_card"/>

        <!-- PURCHASE -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_title_2"
            style="@style/HeadingOne"
            android:layout_marginBottom="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/purchaseRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginBottom="20dp"
            android:background="@drawable/glass_card"/>

        <!-- GOODIES -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_title_3"
            style="@style/HeadingOne"
            android:layout_marginBottom="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/goodiesRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginBottom="20dp"
            android:background="@drawable/glass_card"/>

        <!-- TECHNICAL -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_title_4"
            style="@style/HeadingOne"
            android:layout_marginBottom="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/technicalRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:background="@drawable/glass_card"/>

    </LinearLayout>

</ScrollView>